# atlas-toolkit

./: .gitignore  LICENSE  README.md  pyproject.toml
atlas_toolkit/: __init__.py  types.py
atlas_toolkit/core/: box.py  general.py  headers.py  manip_atoms.py  replicate.py
atlas_toolkit/data/: __init__.py
atlas_toolkit/data/ff/: .mW_Methane.ff.swp  AMBER03.ff  AMBER03.par  AMBER03_SPC.ff  AMBER4.1_v3.0.ff  AMBER4.1_v3.0_vaid.ff  AMBER91.ff  AMBER94.ff  AMBER95-pbf.par  (+179 more)
atlas_toolkit/io/: bgf.py  bgf_parmed.py  bgf_to_lammps.py  ff.py  ff_detect.py  frcmod.py  mol2.py  param_openff.py  parmchk.py
atlas_toolkit/lammps/: __init__.py  data_file.py  data_file_parmed.py  dump.py  input_script.py  topology.py
atlas_toolkit/scripts/: add_box_to_bgf.py  add_ions.py  add_solvent.py  bgf_to_mol2.py  combine_bgf.py  convert_lammps_trj.py  create_lammps_input.py  embed_molecule.py  get_bgf_atoms.py  get_bounds.py  modify_atom_data.py  remove_mols.py  replicate.py  trim_cell.py  update_bgf_coords.py
tests/: test_add_box_to_bgf.py  test_add_ions.py  test_add_solvent.py  test_bgf.py  test_box.py  test_create_lammps_input.py  test_dump.py  test_embed_molecule.py  test_ff.py  test_ff_bonded.py  test_get_bgf_atoms.py  test_modify_atom_data.py  test_mol2.py  test_remove_mols.py  test_replicate.py  test_selection.py  test_trim_cell.py
tests/fixtures/: Cl-Chlorine.bgf
tests/oracle/: bgf_compare.py  conftest.py  test_add_box_oracle.py  test_add_solvent_oracle.py  test_modify_atom_data_oracle.py  test_remove_mols_oracle.py  test_replicate_oracle.py  test_trim_cell_oracle.py
(+275 files in other folders)
